--- a/HelloFacebookSample/en.lproj/HFViewController_iPhone.xib
+++ b/HelloFacebookSample/en.lproj/HFViewController_iPhone.xib
@@ -72,7 +72,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{95, 122}, {130, 130}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSNextKeyView" ref="743807717"/>
+						<reference key="NSNextKeyView" ref="895339881"/>
 						<string key="NSReuseIdentifierKey">_NS:196</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -83,19 +83,19 @@
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUIButton" id="743807717">
+					<object class="IBUIButton" id="895339881">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 275}, {280, 37}}</string>
+						<string key="NSFrame">{{20, 354}, {280, 44}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSNextKeyView" ref="802923271"/>
+						<reference key="NSNextKeyView" ref="921992193"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
-						<object class="NSColor" key="IBUINormalTitleColor" id="1056934299">
+						<object class="NSColor" key="IBUINormalTitleColor" id="758097842">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzE0IDAuMzA5ODAzOTIxNiAwLjUyMTU2ODYyNzUAA</bytes>
 						</object>
@@ -103,7 +103,7 @@
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
-						<string key="IBUINormalTitle">Post Status Update</string>
+						<string key="IBUINormalTitle">Post entry to rusic</string>
 						<object class="NSColor" key="IBUIDisabledTitleColor" id="694029810">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
@@ -116,56 +116,16 @@
 							<int key="type">2</int>
 							<double key="pointSize">15</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="501697092">
+						<object class="NSFont" key="IBUIFont" id="145833669">
 							<string key="NSName">HelveticaNeue-Bold</string>
 							<double key="NSSize">15</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIButton" id="802923271">
-						<reference key="NSNextResponder" ref="774585933"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 319}, {280, 37}}</string>
-						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSNextKeyView" ref="895339881"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<bool key="IBUIOpaque">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<int key="IBUIContentHorizontalAlignment">0</int>
-						<int key="IBUIContentVerticalAlignment">0</int>
-						<int key="IBUIButtonType">1</int>
-						<reference key="IBUINormalTitleColor" ref="1056934299"/>
-						<reference key="IBUIHighlightedTitleColor" ref="850175821"/>
-						<string key="IBUINormalTitle">Post Photo</string>
-						<reference key="IBUIDisabledTitleColor" ref="694029810"/>
-						<reference key="IBUINormalTitleShadowColor" ref="586080074"/>
-						<reference key="IBUIFontDescription" ref="779712432"/>
-						<reference key="IBUIFont" ref="501697092"/>
-					</object>
-					<object class="IBUIButton" id="895339881">
-						<reference key="NSNextResponder" ref="774585933"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 364}, {280, 37}}</string>
-						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSNextKeyView" ref="921992193"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<bool key="IBUIOpaque">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<int key="IBUIContentHorizontalAlignment">0</int>
-						<int key="IBUIContentVerticalAlignment">0</int>
-						<int key="IBUIButtonType">1</int>
-						<reference key="IBUINormalTitleColor" ref="1056934299"/>
-						<reference key="IBUIHighlightedTitleColor" ref="850175821"/>
-						<string key="IBUINormalTitle">Pick Some Friends</string>
-						<reference key="IBUIDisabledTitleColor" ref="694029810"/>
-						<reference key="IBUINormalTitleShadowColor" ref="586080074"/>
-						<reference key="IBUIFontDescription" ref="779712432"/>
-						<reference key="IBUIFont" ref="501697092"/>
-					</object>
 					<object class="IBUIButton" id="921992193">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 409}, {280, 37}}</string>
+						<string key="NSFrame">{{20, 405}, {280, 44}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -173,13 +133,13 @@
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
-						<reference key="IBUINormalTitleColor" ref="1056934299"/>
+						<reference key="IBUINormalTitleColor" ref="758097842"/>
 						<reference key="IBUIHighlightedTitleColor" ref="850175821"/>
-						<string key="IBUINormalTitle">Pick Place</string>
+						<string key="IBUINormalTitle">Post image to rusic</string>
 						<reference key="IBUIDisabledTitleColor" ref="694029810"/>
 						<reference key="IBUINormalTitleShadowColor" ref="586080074"/>
 						<reference key="IBUIFontDescription" ref="779712432"/>
-						<reference key="IBUIFont" ref="501697092"/>
+						<reference key="IBUIFont" ref="145833669"/>
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
@@ -188,6 +148,42 @@
 				<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+			</object>
+			<object class="IBUIButton" id="743807717">
+				<nil key="NSNextResponder"/>
+				<int key="NSvFlags">292</int>
+				<string key="NSFrameSize">{280, 37}</string>
+				<string key="NSReuseIdentifierKey">_NS:9</string>
+				<bool key="IBUIOpaque">NO</bool>
+				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+				<int key="IBUIContentHorizontalAlignment">0</int>
+				<int key="IBUIContentVerticalAlignment">0</int>
+				<int key="IBUIButtonType">1</int>
+				<reference key="IBUINormalTitleColor" ref="758097842"/>
+				<reference key="IBUIHighlightedTitleColor" ref="850175821"/>
+				<string key="IBUINormalTitle">Post Status Update</string>
+				<reference key="IBUIDisabledTitleColor" ref="694029810"/>
+				<reference key="IBUINormalTitleShadowColor" ref="586080074"/>
+				<reference key="IBUIFontDescription" ref="779712432"/>
+				<reference key="IBUIFont" ref="145833669"/>
+			</object>
+			<object class="IBUIButton" id="802923271">
+				<nil key="NSNextResponder"/>
+				<int key="NSvFlags">292</int>
+				<string key="NSFrameSize">{280, 37}</string>
+				<string key="NSReuseIdentifierKey">_NS:9</string>
+				<bool key="IBUIOpaque">NO</bool>
+				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+				<int key="IBUIContentHorizontalAlignment">0</int>
+				<int key="IBUIContentVerticalAlignment">0</int>
+				<int key="IBUIButtonType">1</int>
+				<reference key="IBUINormalTitleColor" ref="758097842"/>
+				<reference key="IBUIHighlightedTitleColor" ref="850175821"/>
+				<string key="IBUINormalTitle">Post Photo</string>
+				<reference key="IBUIDisabledTitleColor" ref="694029810"/>
+				<reference key="IBUINormalTitleShadowColor" ref="586080074"/>
+				<reference key="IBUIFontDescription" ref="779712432"/>
+				<reference key="IBUIFont" ref="145833669"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -208,22 +204,6 @@
 						<reference key="destination" ref="774585933"/>
 					</object>
 					<string key="id">23</string>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">buttonPostStatus</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="743807717"/>
-					</object>
-					<string key="id">28</string>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">buttonPostPhoto</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="802923271"/>
-					</object>
-					<string key="id">29</string>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -248,6 +228,22 @@
 						<reference key="destination" ref="921992193"/>
 					</object>
 					<string key="id">39</string>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">buttonPostStatus</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="743807717"/>
+					</object>
+					<string key="id">28</string>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">buttonPostPhoto</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="802923271"/>
+					</object>
+					<string key="id">29</string>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -309,12 +305,10 @@
 						<string key="id">6</string>
 						<reference key="object" ref="774585933"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="802923271"/>
 							<reference ref="895339881"/>
 							<reference ref="876670607"/>
 							<reference ref="779248524"/>
 							<reference ref="921992193"/>
-							<reference ref="743807717"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -322,16 +316,6 @@
 						<string key="id">18</string>
 						<reference key="object" ref="876670607"/>
 						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="774585933"/>
-					</object>
-					<object class="IBObjectRecord">
-						<string key="id">24</string>
-						<reference key="object" ref="743807717"/>
-						<reference key="parent" ref="774585933"/>
-					</object>
-					<object class="IBObjectRecord">
-						<string key="id">25</string>
-						<reference key="object" ref="802923271"/>
 						<reference key="parent" ref="774585933"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -348,6 +332,16 @@
 						<string key="id">37</string>
 						<reference key="object" ref="921992193"/>
 						<reference key="parent" ref="774585933"/>
+					</object>
+					<object class="IBObjectRecord">
+						<string key="id">24</string>
+						<reference key="object" ref="743807717"/>
+						<reference key="parent" ref="0"/>
+					</object>
+					<object class="IBObjectRecord">
+						<string key="id">25</string>
+						<reference key="object" ref="802923271"/>
+						<reference key="parent" ref="0"/>
 					</object>
 				</array>
 			</object>
